crated index.html, persona.html and style.css

--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -12,16 +12,14 @@
 </head>
 <img src="juan.jpg" alt="Juan" class="resize">
 
-    <div class="resize color font">Name: Juan Hernandez</div>
-    <div class="resize color font">Age: 40</div>
+    <div>Name: Juan Hernandez</div>
+    <div>Age: 40</div>
 
 
 <body>
 
     <h1>Technology</h1>
-        <div>
-            <p>Use iPhone XS Max on 14.0 and uses chrome and Safari also uses iPad4 on 13.0 and uses Safari. Juan understand how to navigate thru the web.</p>
-
+        <p>Use iPhone XS Max on 14.0 and uses chrome and Safari also uses iPad4 on 13.0 and uses Safari. Juan understand how to navigate thru the web.</p>
     <h1>Goal</h1>
         <p>Juan will find the location, where the food truck will be located the day.  Also it will be easy to order meals on advance and to find special offers.</p>
     <h1>Frustrations your persona may be facing</h1>
