crated index.html, persona.html and style.css

--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -1,30 +1,9 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>milestone-1</title>
-    <link rel="stylesheet" href="./style.css">
+purpose: to increase sales. I would like to create a web and mobile page for a food truck business.
 
 
-</head>
-<img src="juan.jpg" alt="Juan" class="resize">
-
-    <div>Name: Juan Hernandez</div>
-    <div>Age: 40</div>
+Audience: All New Mexico customer that love good food.
 
 
-<body>
+Goal: it will attract customers. to make it easy to find the menu, order food in advance, pay, to show the location of the food truck and the hours of operation.
 
-    <h1>Technology</h1>
-        <p>Use iPhone XS Max on 14.0 and uses chrome and Safari also uses iPad4 on 13.0 and uses Safari. Juan understand how to navigate thru the web.</p>
-    <h1>Goal</h1>
-        <p>Juan will find the location, where the food truck will be located the day.  Also it will be easy to order meals on advance and to find special offers.</p>
-    <h1>Frustrations your persona may be facing</h1>
-        <p>Juan can not locate the food truck or hours of operation.</p>
 
-            <a href="./persona.html">persona</a>
-</body>
-</html>
