crated index.html, persona.html and style.css/started mile stone 2/ try to fix color and background/add columns, change heater color and font.

--- a/milestone-2/index.html
+++ b/milestone-2/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css2?family=Piedra&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -14,13 +15,17 @@
 
 
 <div>
+
     <h1>Los Huaraches De Villa</h1>
+
 <!--    <<img src="villa.jpg" class="card-img-center" alt="villa" id="villa">-->
 </div>
 <div class="jumbotron jumbotron-fluid">
     <div class="heater">
         <div class="float-left">
             <img src="logo1.jpg" class="card-img-left" alt="logo" id="logo">
+        </div>
+            <div>
             <h2 class="about-us">About Us:</h2>
                 <p class="about-us">As a native from Mexico City, raise in California.
                 I have always lived around small food business, and
@@ -36,12 +41,58 @@
 </div>
 
 
-
-<div class="modal-body">
-    <button type="button" class="btn btn-primary" data-toggle="modal-body" data-target="#Step1" data-whatever="Step-1">Chose Your Product</button>
-    <button type="button" class="btn btn-primary" data-toggle="modal-body" data-target="#Step2" data-whatever="step-2">Chose Your Meat</button>
-    <button type="button" class="btn btn-primary" data-toggle="modal-body" data-target="#Step3" data-whatever="step-3">Modified Your Food</button>
+<div class="dropdown">
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Menu
+    </button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" href="#tacos">Tacos</a>
+        <a class="dropdown-item" href="#huaraches">Huaraches</a>
+        <a class="dropdown-item" href="#tortas">Tortas</a>
+        <a class="dropdown-item" href="#pambasos">Pambasos</a>
+        <a class="dropdown-item" href="#burritos">burritos</a>
+        <a class="dropdown-item" href="#quesadillas">quesadillas</a>
+    </div>
 </div>
+
+<div class="row">
+    <div class="column">
+        <h2>Step 1: Chose from the menu</h2>
+        <ul>
+            <li>Tacos: Come with your choice of meat, Cilantro and Onion.</li>
+            <li>Huaraches: Come with your choice of meat, beans, lettuce, sour cream, and cheese.</li>
+            <li>Tortas: Comes with your choice of meat, beans, lettuce, tomato, avocado, and toasted Oxaca cheese.</li>
+            <li>Pambasos: Comes with your choice of meat, lettuce, sour cream, and cheese.</li>
+            <li>Burritos: Comes with your choice of meat, beans, lettuce, and cheese.</li>
+            <li>Quesadilla: Comes with your choice of meat, cheese and a side salad with avocado, tomato.</li>
+        </ul>
+    </div>
+
+    <div class="column">
+        <h2>Step 2: Chose the type of meat you like</h2>
+        <ul>
+            <li>Asada - Steak</li>
+            <li>Al Pastor - Marinated Pork</li>
+            <li>Chorizo</li>
+            <li>Barria - Slow Cook Beef</li>
+            <li>Milanesa - Breaded Steak</li>
+            <li>Pierna - Ham</li>
+        </ul>
+    </div>
+
+    <div class="column">
+        <h2>Step 3: Modified your toppings</h2>
+        <ul>
+            <li class="onion">Onion</li>
+            <li class="cilantro">Cilantro</li>
+            <li class="salsa">Salsa</li>
+        </ul>
+    </div>
+</div>
+
+
+
+
 <div class="modal-body">
     <div class="Menu">
         <h2 class="Step-1">Chose Your Product</h2>
@@ -69,7 +120,7 @@
             <li class="salsa">Salsa</li>
     </div>
     <div class="container">
-
+    <iput></iput>
     </div>
 </div>
 <div class="container">
