--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -1,9 +1,19 @@
-purpose: to increase sales. I would like to create a web and mobile page for a food truck business.
+purpose: to increase sales. I would like to create
+a web and mobile page for a food truck business.
 
 
 Audience: All New Mexico customer that love good food.
 
 
-Goal: it will attract customers. to make it easy to find the menu, order food in advance, pay, to show the location of the food truck and the hours of operation.
+Goal: it will attract customers.
+make it easy to find the menu,
+order food in advance,and pay,
+to show the location of the food truck and the hours of operation.
 
 
+Rework the persona to make it more anonymous (based on a fictitious user)
+Add a purpose statement
+Add an audience statement
+add goals statement for the overall website
+add a user-story statement.
+felipe hate when he is crabbing some good southern Mexican food he can not find his favorite food truck.
