--- a/public_html/documentation/persona.html
+++ b/public_html/documentation/persona.html
@@ -8,11 +8,11 @@
     <title>persona</title>
 
     <link rel="stylesheet" href="./style.css">
-
+    <a href="./info-persona.html">persona</a>
 
 </head>
-<img src="juan.jpg" alt="Juan" class="resize">
-<div>Name: Juan Hernandez</div>
+<img src="photo.jpg" alt="Felipe" class="resize">
+<div>Name: Felipe Gonzales</div>
 <div>Age: 40</div>
 
 <body>
@@ -20,11 +20,11 @@
     <h1>Technology</h1>
         <p>Use iPhone XS Max on 14.0 and uses chrome and Safari also uses iPad4 on 13.0 and uses Safari. Juan understand how to navigate thru the web.</p>
     <h1>Goal</h1>
-        <p>Juan will find the location, where the food truck will be located the day.  Also it will be easy to order meals on advance and to find special offers.</p>
+        <p>Felipe will find the location, where the food truck will be located the day.  Also it will be easy to order meals on advance and to find special offers.</p>
     <h1>Frustrations your persona may be facing</h1>
-        <p>Juan can not locate the food truck or hours of operation.</p>
+        <p>Felipe can not locate the food truck or hours of operation.</p>
     <h1>Behaviors and Attitudes</h1>
-        <p>Juan love's the customer service that Los Huarache de villa provides to there customers. Los Huaraches de Villa  listens to the customer, on especial request on what the customer would like eat. </p>
+        <p>Felipe love's the customer service that Los Huarache de villa provides to there customers. Los Huaraches de Villa  listens to the customer, on especial request on what the customer would like eat. </p>
     <h1>Situation Scenario</h1>
         <p>One time I requested a Vegetarian meal, the owner jump and  ask what vegetables I like and prepare me a veggie bowl with bean, rice, and vegetables. I was pleased to see that even that is not what they sale they were happy to make me something that I would in joy.</p>
 
