crated index.html, persona.html and style.css/started mile stone 2/ try to fix color and background/add columns, change heater color and font.fix my persona/try to fix dropdown.

--- a/milestone-2/milestone-2.html
+++ b/milestone-2/milestone-2.html
@@ -19,7 +19,7 @@
     <b>Dropdowns for product</b>
         <p> this function will allow to click into the product information</p>
     <b>Maps and Location</b>
-        <p>this will allow customer to find the food truck easyier</p>
+        <p>this will allow customer to find the food truck easier</p>
     <b>Name,Phone Number and Massage</b>
         <p>this will allow customer to massage the food truck and order meals</p>
     <b>social media</b>
