crated index.html, persona.html and style.css/started mile stone 2/ try to fix color and background/add columns, change heater color and font.fix my persona/try to fix dropdown.

--- a/milestone-2/index.html
+++ b/milestone-2/index.html
@@ -183,8 +183,7 @@
     <img src="logo1.jpg" alt="logo" id="logo">
 </div>
 <!--================about me information================-->
-<div class="container ">
-
+<div class="container" id="about us">
     <div class="column row">
         <div class="jumbotron jumbotron-fluid">
             <h2>About Us:</h2>
@@ -201,15 +200,16 @@
     </div>
 </div>
 <!-- ================Dropdowns for product================-->
-<div class="container" id="steps">
-    <div class="mx-auto" >
-    <div class="col-row-sm">
+<div class="center" id="steps">
+    <div class="mx-auto">
+        <!--    <div class="col-row-sm">-->
         <div class="col-row-sm btn-group">
             <button class="btn btn-outline-success btn-md dropdown-toggle" type="button"
-                    id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                    data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">Meats
             </button>
-            <div class="mx-auto dropdown-menu sm-light p-4 text-muted" style="max-width: 200px;" data-display="static" aria-labelledby="dropdownMenuButton">
+            <div class="mx-auto dropdown-menu sm-light p-4 text-muted">
+<p>
                 <a class="dropdown-item mb-0" href="#asada"><b>Asada - Stake:</b>Carne asada is
                     sirloin steak sliced, cooked with a marinade and some searing to impart a charred
                     flavor.</a>
@@ -223,39 +223,45 @@
                 <a class="dropdown-item mb-0" href="#milanesa"><b>Milanesa - Breaded Steak:</b>Milanesa is a
                     breaded steak with spices.</a>
                 <a class="dropdown-item mb-0" href="#jamon"><b>Pierna - Ham:</b>Pierna is smoke ham.</a>
+                </p>
             </div>
         </div>
         <div class="col-row btn-group">
             <button class="btn btn-outline-light btn-md dropdown-toggle" type="button"
-                    id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                    data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">Menu
             </button>
-            <div class="mx-auto dropdown-menu sm-danger p-4 text-muted" style="max-width: 200px;" data-display="static" aria-labelledby="dropdownMenuButton">
+            <div class="mx-auto dropdown-menu sm-danger p-4 text-muted">
                 <a class="dropdown-item mb-0" href="#cheese"><b>Tacos:</b>Comes with onion and fresh cilantro.</a>
-                <a class="dropdown-item mb-0" href="#onion"><b>Tacos de Canasta:</b>Come with your choice of beans, Chorizo
+                <a class="dropdown-item mb-0" href="#onion"><b>Tacos de Canasta:</b>Come with your choice of beans,
+                    Chorizo
                     with Potato, and Chicharron Aprensado. With a side of curtido (cabbage,onion,carrots and chile).</a>
                 <a class="dropdown-item mb-0" href="#cilantro"><b>Huaraches:</b> Come with your choice of meat, beans,
                     lettuce, sour cream, and cheese.</a>
-                <a class="dropdown-item mb-0" href="#lettuce"><b>Tortas:</b> Comes with your choice of meat, beans, lettuce,
+                <a class="dropdown-item mb-0" href="#lettuce"><b>Tortas:</b> Comes with your choice of meat, beans,
+                    lettuce,
                     tomato, avocado, and toasted Oxaca cheese.</a>
-                <a class="dropdown-item mb-0" href="#tomato"><b>Pambasos:</b> Comes with your choice of meat, lettuce, sour
+                <a class="dropdown-item mb-0" href="#tomato"><b>Pambasos:</b> Comes with your choice of meat, lettuce,
+                    sour
                     cream, and cheese.</a>
-                <a class="dropdown-item mb-0" href="#cheese"><b>Burritos:</b> Comes with your choice of meat, beans, lettuce,
+                <a class="dropdown-item mb-0" href="#cheese"><b>Burritos:</b> Comes with your choice of meat, beans,
+                    lettuce,
                     and cheese.</a>
-                <a class="dropdown-item mb-0" href="#Quesadilla"><b>Quesadilla:</b> Comes with your choice of meat, cheese
+                <a class="dropdown-item mb-0" href="#Quesadilla"><b>Quesadilla:</b> Comes with your choice of meat,
+                    cheese
                     and a side salad with avocado, tomato.</a>
             </div>
         </div>
 
         <div class="col-row btn-group">
             <button class="btn btn-outline-danger btn-md dropdown-toggle" type="button"
-                    id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                    data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">Menu Price
             </button>
-            <div class="mx-auto dropdown-menu sm-success p-4 text-muted" style="max-width: 200px;" data-display="static" aria-labelledby="dropdownMenuButton">
+            <div class="mx-auto dropdown-menu sm-success text-muted">
                 <a class="dropdown-item" href="#tacos"> <b>4 Tacos</b> $8.00, <b>4 tacos Of Tripas</b> $9.00</a>
                 <a class="dropdown-item" href="#huaraches"><b>Huaraches</b> sm $8.00 md $10.00 lg $12.00</a>
-                <a class="dropdown-item" href="#tortas"><b>Tortas $8.00 Torta Cubana</b> $10.00 </a>
+                <a class="dropdown-item" href="#tortas"><b>Tortas</b> $8.00 <b>Torta Cubana</b> $10.00 </a>
                 <a class="dropdown-item" href="#pambasos"><b>Pambasos</b> $8.00</a>
                 <a class="dropdown-item" href="#burritos"><b>Burritos</b> $8.00</a>
                 <a class="dropdown-item" href="#quesadillas"><b>Quesadillas With meet</b> $8.00 <b>Cheese
@@ -263,7 +269,7 @@
             </div>
         </div>
     </div>
-    </div>
+</div>
 </div>
 <!--================Maps and Location================-->
 <div class="justify-content-space-between">
